Fixed issue where the lenses could not be clicked due to the z-index

--- a/src/assets/stylesheets/components/_lenses.scss
+++ b/src/assets/stylesheets/components/_lenses.scss
@@ -3,7 +3,6 @@
   height: 45vmin;
   position: absolute;
   width: 45vmin;
-  z-index: -1;
   appearance: none;
   border: 1vmin solid #333;
   padding: 0;
