--- a/src/assets/stylesheets/components/_simon.scss
+++ b/src/assets/stylesheets/components/_simon.scss
@@ -3,6 +3,7 @@
   height: 40vmin;
   position: relative;
   width: 40vmin;
+  z-index: 1;
   background-image: linear-gradient(to bottom, #333 50%, #fdfaf7 50%);
   border: 2vmin solid #333;
 }
